--- a/css/master.css
+++ b/css/master.css
@@ -5,7 +5,7 @@ html {
     overflow-y: hidden;
   }
   body{
-    background-image: url(https://images.unsplash.com/photo-1616427030011-214e41469f40?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80);
+    background-image: url(https://raw.githubusercontent.com/Qubi-B/qubi_prints_website/main/druked_beta/image1.jpeg);
     background-position: 0% 20%;
 
   background-size: cover;
