--- a/css/zast.css
+++ b/css/zast.css
@@ -9,7 +9,7 @@
     text-align: left;
   }
   .zast_img{
-    background-image: url("https://media.printables.com/media/prints/237722/images/2152786_63ea317f-5c09-4c14-8d0f-9115676db35a/thumbs/inside/1920x1440/jpeg/large_display_img_4484_237722.webp");
+    background-image: url("https://images.unsplash.com/photo-1620840781738-6061c542cdf8?auto=format&fit=crop&q=80&w=3131&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
